# contabilidade

pijr-contabilidade-main/pijr-contabilidade-main/: README.md  boleto_sicoob.py  boleto_sicredi.py  boletos.csv  contas.csv  extrato_bradesco.py  extrato_credisis.py  extrato_sicoob.py  extrato_sicredi.py  gerenciar_contas.py  lancamento.py  main.py  match_contas.py  pyproject.toml  utils.py
